--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,12 +12,17 @@ android {
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     productFlavors {
         live {
             applicationId 'com.cmpe272.beecafeteria'
-            buildConfigField 'String', 'apiDomainName', '"http://www.mocky.io"'
+            buildConfigField 'String', 'apiDomainName', '"http://beecafeteria.mybluemix.net"'
         }
+    }
+
+    packagingOptions {
+        exclude 'META-INF/services/javax.annotation.processing.Processor'
     }
 
     buildTypes {
@@ -28,15 +33,26 @@ android {
     }
 }
 
+repositories {
+    jcenter()
+    maven { url "https://jitpack.io" }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.1.1'
-    compile "com.google.android.gms:play-services:7.5.+"
-    compile 'com.android.support:design:22.2.0'
-    compile 'com.jakewharton:butterknife:6.1.0'
+    compile 'com.android.support:support-v4:22.0.2'
+    compile 'com.parse:parse-android:1.11.0'
+    compile 'com.parse.bolts:bolts-android:1.3.0'
+    compile 'com.google.android.gms:play-services-gcm:8.3.0'
+    compile 'com.android.support:design:23.1.1'
+    compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.squareup.okhttp:okhttp:2.5.0'
     compile 'com.mcxiaoke.volley:library:1.0.19'
-    compile 'com.android.support:support-annotations:23.1.0'
+    compile 'com.android.support:support-annotations:23.1.1'
     compile 'org.parceler:parceler:0.2.13'
+    compile 'com.android.support:recyclerview-v7:23.1.1'
+    compile 'org.lucasr.twowayview:twowayview:0.1.4'
+    compile 'com.github.techery:ProperRatingBar:527d37188c'
 }
