//GimbalSDK integrated with completing whole application

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
     <!-- To access vibrate-->
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <!-- parse permissions -->
     <permission
@@ -27,7 +31,7 @@
     <application
         android:name="com.cmpe272.beecafeteria.base.App"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/app_icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
@@ -70,7 +74,7 @@
 
         <!-- Notification Handler service -->
         <service
-            android:name=".services.GCMListnerService"
+            android:name=".services.GCMListenerService"
             android:exported="false" >
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
@@ -80,6 +84,9 @@
             android:name=".services.GCMRegistrationIntentService"
             android:exported="false" />
         <service
+            android:name=".services.GCMUnregistrationIntentService"
+            android:exported="false" />
+        <service
             android:name=".services.MyInstaceIDListnerService"
             android:exported="false" >
             <intent-filter>
@@ -87,43 +94,7 @@
             </intent-filter>
         </service>
 
-        <!-- All parser activity and services -->
 
-        <activity
-            android:name=".parser.LoginActivity"
-            android:label="@string/app_name"
-            android:windowSoftInputMode="stateHidden|adjustResize">
-
-        </activity>
-        <activity
-            android:name=".parser.MainActivity"
-            android:label="@string/app_name" />
-        <service android:name="com.parse.PushService" />
-
-        <receiver
-            android:name=".parser.CustomPushReceiver"
-            android:exported="false">
-            <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
-                <action android:name="android.intent.action.USER_PRESENT" />
-                <action android:name="com.parse.push.intent.RECEIVE" />
-                <action android:name="com.parse.push.intent.DELETE" />
-                <action android:name="com.parse.push.intent.OPEN" />
-            </intent-filter>
-        </receiver>
-        <receiver
-            android:name="com.parse.GcmBroadcastReceiver"
-            android:permission="com.google.android.c2dm.permission.SEND">
-            <intent-filter>
-                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
-                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
-
-                <!-- IMPORTANT: Change "info.androidhive.parsenotifications" to match your app's package name. -->
-                <category android:name="com.cmpe272.beecafeteria" />
-            </intent-filter>
-        </receiver>
-
-        <!-- Completed all parser activity and services -->
 
 
     </application>
