--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     compile 'com.android.support:support-v4:22.0.2'
     compile 'com.parse:parse-android:1.11.0'
     compile 'com.parse.bolts:bolts-android:1.3.0'
+    compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'com.google.android.gms:play-services-gcm:8.3.0'
     compile 'com.android.support:design:23.1.1'
     compile 'com.jakewharton:butterknife:7.0.1'
@@ -54,7 +55,10 @@ dependencies {
     compile 'com.android.support:support-annotations:23.1.1'
     compile 'org.parceler:parceler:0.2.13'
     compile 'com.android.support:recyclerview-v7:23.1.1'
+    compile 'com.android.support:cardview-v7:23.1.1'
     compile 'org.lucasr.twowayview:core:1.0.0-SNAPSHOT@aar'
     compile 'org.lucasr.twowayview:layouts:1.0.0-SNAPSHOT@aar'
     compile 'com.github.techery:ProperRatingBar:527d37188c'
+    compile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
+    compile files('libs/gimbal.jar')
 }
